model for 19th May. subwords models are too big for git LFS.

--- a/BlazingText_Word2Vec_20x.ipynb
+++ b/BlazingText_Word2Vec_20x.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "    key = bt_model.model_data[bt_model.model_data.find(\"/\", 5)+1:]\n",
     "    \n",
-    "    s3.Bucket(bucket).download_file(key, 'cbow_model'+str(i)+'.tar.gz')\n",
+    "    s3.Bucket(bucket).download_file(key, 'cbow_model_w'+str(i)+'.tar')\n",
     "\n",
     "for i in range(1,11):\n",
     "    bt_skipgram_model.set_hyperparameters(mode=\"skipgram\",\n",
@@ -354,7 +354,7 @@
     "\n",
     "    key = bt_model.model_data[bt_model.model_data.find(\"/\", 5)+1:]\n",
     "    \n",
-    "    s3.Bucket(bucket).download_file(key, 'skipgram_model'+str(i)+'.tar.gz')"
+    "    s3.Bucket(bucket).download_file(key, 'skipgram_model_w'+str(i)+'.tar')"
    ]
   },
   {
